@@ -118,7 +118,6 @@ import com.google.common.collect.Sets;
 @ExtendWith( MockitoExtension.class )
 class ExpressionService2Test extends DhisConvenienceTest
 {
-
     @Mock
     private HibernateGenericStore<Expression> hibernateGenericStore;
 
@@ -419,6 +418,7 @@ class ExpressionService2Test extends DhisConvenienceTest
         }
     }
 
+    @SafeVarargs
     private <T extends IdentifiableObject> Map<String, T> getMap( T... idObjects )
     {
         return IdentifiableObjectUtils.getIdMap( List.of( idObjects ), IdScheme.UID );
@@ -440,11 +440,9 @@ class ExpressionService2Test extends DhisConvenienceTest
 
     private void mockConstantService()
     {
-        when( constantService.getConstantMap() ).thenReturn(
-            ImmutableMap.<String, Constant> builder()
-                .put( constantA.getUid(), constantA )
-                .put( constantB.getUid(), constantB )
-                .build() );
+        when( constantService.getConstantMap() ).thenReturn( Map.of(
+            constantA.getUid(), constantA,
+            constantB.getUid(), constantB ) );
     }
 
     // -------------------------------------------------------------------------
@@ -831,7 +829,7 @@ class ExpressionService2Test extends DhisConvenienceTest
     {
         Set<DimensionalItemId> itemIds = Sets.newHashSet( getId( opA ) );
 
-        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = ImmutableMap.of(
+        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = Map.of(
             getId( opA ), opA );
 
         when( dimensionService.getDataDimensionalItemObjectMap( itemIds ) ).thenReturn( expectedItemMap );
@@ -869,7 +867,7 @@ class ExpressionService2Test extends DhisConvenienceTest
     {
         Set<DimensionalItemId> itemIds = Sets.newHashSet( getId( opA ), getId( opE ), getId( opF ) );
 
-        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = ImmutableMap.of(
+        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = Map.of(
             getId( opA ), opA,
             getId( opE ), opE,
             getId( opF ), opF );
@@ -1026,7 +1024,7 @@ class ExpressionService2Test extends DhisConvenienceTest
     {
         Set<DimensionalItemId> itemIds = Sets.newHashSet( getId( opA ) );
 
-        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = ImmutableMap.of(
+        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = Map.of(
             getId( opA ), opA );
 
         when( dimensionService.getDataDimensionalItemObjectMap( itemIds ) ).thenReturn( expectedItemMap );
@@ -1076,7 +1074,7 @@ class ExpressionService2Test extends DhisConvenienceTest
     {
         Set<DimensionalItemId> itemIds = Sets.newHashSet( getId( opA ) );
 
-        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = ImmutableMap.of(
+        Map<DimensionalItemId, DimensionalItemObject> expectedItemMap = Map.of(
             getId( opA ), opA );
 
         when( dimensionService.getDataDimensionalItemObjectMap( itemIds ) ).thenReturn( expectedItemMap );
